# vectorizedb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  test.yaml
tests/: basic_test.py  basic_tests.py
vectorizedb/: __init__.py
