[tool.poetry]
name = "vectorizedb"
version = "0.0.6"
description = "VectorizeDB is a database for vectorized data and metadata, allowing for fast similarity search and retrieval."
authors = ["JJ Ben-Joseph <jj@tensorspace.ai>", "Yair Benita <yair@aionlabs.com>"]
license = "Apache"
readme = "README.rst"
homepage = "https://github.com/aion-labs/vectorizedb"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">3.9"
numpy = "*"
hnswlib = "*"
lmdb = "*"
msgpack = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
